Initial commit from sources taken out of the SQLscalpel project.

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -1,20 +1,30 @@
-# A sample configuration file used during development
+# A sample sqlprobe configuration file
+# This file should live within the directory from which you start the program.
+# Alternatively, it is looked up in your home directory
 
 [DEFAULT]
-# the ip number where to reach the SQLscalpel service
+# The default section contains the properties shared among all target systems.
+# The main property is the IP adress to reach a SQLscalpel service
 # server = localhost:5000
 server = localhost:5000
 
-# experimental results can only be delivered by registered users
+# The prime purpose of sqlprobe is to run databas experiments on
+# behalf of registered sqlscalpel users or their team members.
+# The registered user will block all experimental results that are
+# likely not genuine, e.g. faked user, duplicate results, or timeout at the server.
 user = mk
 
-# the local platform is known under a nickname 
+# sqlscalpel differentiates the hosts on which experiments are ran with a nickname
+# this way one can conceal the actual host name.
 host = localhost
 
-# Optionally terminate experiments after a few seconds
+# Long running experiments can be costly, espcially in a Cloud setting.
+# Therefore, when the DBMS has an option to timeout a query, it can use this
+# global time out property (in seconds)
 timeout = 60
 
-trace = yes
+# For debugging purposes one can turn on this flag
+debug = yes
 
 # Optionally requests multiple task at once
 batch = 1
