--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -24,7 +24,7 @@ host = localhost
 timeout = 60
 
 # For debugging purposes one can turn on this flag
-debug = yes
+debug = false
 
 # Optionally requests multiple task at once
 batch = 1
