Initial commit from sources taken out of the SQLscalpel project.

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -1,6 +1,6 @@
 # A sample sqlprobe configuration file
 # This file should live within the directory from which you start the program.
-# Alternatively, it is looked up in your home directory
+# Alternatively, passed as a command line argument to sqlprobe.py
 
 [DEFAULT]
 # The default section contains the properties shared among all target systems.
