--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -24,7 +24,10 @@ host = localhost
 timeout = 60
 
 # For debugging purposes one can turn on this flag
-debug = false
+debug = true
+
+# don't stop the driver
+forever= true
 
 # Optionally requests multiple task at once
 batch = 1
