--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -51,6 +51,8 @@ experiment = q06,q01
 # The location of the database for this product
 dbfarm = /export/scratch1/home/mk/dbfarm
 
+# if you also need the template and binding table set 'extra'
+extra = no
 
 [SQLite]
 db = sf1
