--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -46,7 +46,7 @@ dbms = MonetDB
 
 # using the name 'all' is interpreted as arbitrary project/experiment
 project = TPC-H
-experiment = q06,q01
+experiment = q01,q03,q06
 
 # The location of the database for this product
 dbfarm = /export/scratch1/home/mk/dbfarm
