--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -33,8 +33,9 @@ forever= true
 batch = 1
 
 # All experiments are ran a number of times.
-# The first run is considered a cold run
-# The best of all is reported on the website
+# Preferably a number of times, because the first
+# run typically warms up the database engine.
+#
 repeat = 5
 
 # The sections may be specific to the target DBMS
