--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -69,3 +69,9 @@ dbfarm = /export/scratch1/home/mk/data
 project = TPC-H
 experiment = q06,q01
 
+[Actian]
+db = sf1,sf10
+dbms = Actian
+dbfarm = # Ingres specific properties
+project = TPC-H
+experiment = q06,q01
