--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -44,9 +44,9 @@ repeat = 5
 # multiple database instances can be exercised in a round robin fashion
 db = sf1,sf10
 dbms = MonetDB
-
-# using the name 'all' is interpreted as arbitrary project/experiment
+# using the name '*' is interpreted as arbitrary project/experiment
 project = TPC-H
+experiment = *
 
 # The location of the database for this product
 dbfarm = /export/scratch1/home/mk/dbfarm
@@ -68,6 +68,11 @@ dbms = PostgreSQL
 dbfarm = /export/scratch1/home/mk/data
 project = TPC-H
 experiment = q06,q01
+
+[MariaDB]
+db = sf1,sf10
+dbms = MariaDB
+dbfarm = # specific properties
 
 [Actian]
 db = sf1,sf10
