--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -26,11 +26,8 @@ timeout = 60
 # For debugging purposes one can turn on this flag
 debug = true
 
-# don't stop the driver
+# don't stop the driver, otherwise stop upon error or out of work
 forever= true
-
-# Optionally requests multiple task at once
-batch = 1
 
 # All experiments are ran a number of times.
 # Preferably a number of times, because the first
