--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -18,6 +18,9 @@ user = mk
 # this way one can conceal the actual host name.
 host = localhost
 
+# the default target can be set globally
+target = UNKNOWN
+
 # Long running experiments can be costly, espcially in a Cloud setting.
 # Therefore, when the DBMS has an option to timeout a query, it can use this
 # global time out property (in seconds)
