Add bailout and reading from an input file

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -32,11 +32,19 @@ debug = true
 # don't stop the driver, otherwise stop upon error or out of work
 forever= true
 
+# After too many database errors bail out to assess the scalpel grammar
+bailout = 10
+
 # All experiments are ran a number of times.
 # Preferably a number of times, because the first
 # run typically warms up the database engine.
 #
 repeat = 5
+
+# a batch of experiments can be stored in a file designate as input.
+# instead of contacting the webserver, this file is processed
+# the results are sent to standard out for capture
+input =
 
 # The sections may be specific to the target DBMS
 
