--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -33,7 +33,8 @@ debug = true
 forever= true
 
 # After too many database errors bail out to assess the scalpel grammar
-bailout = 10
+# a value 0 means never to bail out, otherwise it is the number of errors allowed
+bailout = 0
 
 # All experiments are ran a number of times.
 # Preferably a number of times, because the first
@@ -54,7 +55,7 @@ db = sf1,sf10
 dbms = MonetDB
 # using the name '*' is interpreted as arbitrary project/experiment
 project = TPC-H
-experiment = *
+experiment = q01,q06
 
 # The location of the database for this product
 dbfarm = /export/scratch1/home/mk/dbfarm
