turn off debugging

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -16,7 +16,7 @@ user = mk
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name.
-host = localhost
+host = myMac
 
 # the default target can be set globally
 target = UNKNOWN
@@ -27,7 +27,7 @@ target = UNKNOWN
 timeout = 60
 
 # For debugging purposes one can turn on this flag
-debug = true
+debug = false
 
 # don't stop the driver, otherwise stop upon error or out of work
 forever= true
@@ -55,7 +55,7 @@ db = sf1,sf10
 dbms = MonetDB
 # using the name '*' is interpreted as arbitrary project/experiment
 project = TPC-H
-experiment = q01,q06
+experiment = *
 
 # The location of the database for this product
 dbfarm = /export/scratch1/home/mk/dbfarm
