--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -47,7 +47,8 @@ repeat = 5
 # the results are sent to standard out for capture
 input =
 
-# The sections may be specific to the target DBMS
+# The sections are specific to the target DBMS identified by its nickname
+# Additional properties to initialize the DBMS server are provided by the server?
 
 [MonetDB]
 # multiple database instances can be exercised in a round robin fashion
