--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -27,7 +27,7 @@ target = UNKNOWN
 timeout = 60
 
 # For debugging purposes one can turn on this flag
-debug = false
+debug = true
 
 # don't stop the driver, otherwise stop upon error or out of work
 forever= true
@@ -57,10 +57,20 @@ dbms = MonetDB
 # using the name '*' is interpreted as arbitrary project/experiment
 project = TPC-H
 experiment = *
-
 # The location of the database for this product
 dbfarm = /export/scratch1/home/mk/dbfarm
+# if you also need the template and binding table set 'extra'
+extra = no
 
+[MonetDBopt]
+# multiple database instances can be exercised in a round robin fashion
+db = sf1,sf10
+dbms = MonetDBopt
+# using the name '*' is interpreted as arbitrary project/experiment
+project = TPC-H
+experiment = *
+# The location of the database for this product
+dbfarm = /export/scratch1/home/mk/dbfarm
 # if you also need the template and binding table set 'extra'
 extra = no
 
@@ -82,7 +92,10 @@ experiment = q06,q01
 [MariaDB]
 db = sf1,sf10
 dbms = MariaDB
-dbfarm = # specific properties
+project = TPC-H
+experiment = q06,q01
+dbfarm =/export/scratch1/home/mk/dbfarm-mariadb
+dbsocket=/export/scratch1/home/mk/.mariadb.socket
 
 [Actian]
 db = sf1,sf10
