--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -96,6 +96,7 @@ project = TPC-H
 experiment = q06,q01
 dbfarm =/export/scratch1/home/mk/dbfarm-mariadb
 dbsocket=/export/scratch1/home/mk/.mariadb.socket
+bailout = 3
 
 [Actian]
 db = sf1,sf10
