--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -96,6 +96,7 @@ project = TPC-H
 experiment = q06,q01
 dbfarm =/export/scratch1/home/mk/dbfarm-mariadb
 dbsocket=/export/scratch1/home/mk/.mariadb.socket
+command=mysql --socket={socket} --database={database} -u root --password=tpch
 bailout = 3
 
 [Actian]
@@ -104,3 +105,4 @@ dbms = Actian
 dbfarm = # Ingres specific properties
 project = TPC-H
 experiment = q06,q01
+command= sql {database}
