--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -96,7 +96,7 @@ project = TPC-H
 experiment = q06,q01
 dbfarm =/export/scratch1/home/mk/dbfarm-mariadb
 dbsocket=/export/scratch1/home/mk/.mariadb.socket
-command=mysql --socket={socket} --database={database} -u root --password=tpch
+command=mysql --socket={socket} --database={database} -u root --password=tpch --lower_case_table_names=1
 bailout = 3
 
 [Actian]
