Added MariaDB, firebird drivers

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -1,24 +1,29 @@
+# (c) 2018- MonetDB Solutions
+# author: Martin Kersten
 # A sample sqlprobe configuration file
 # This file should live within the directory from which you start the program.
 # Alternatively, passed as a command line argument to sqlprobe.py
 
 [DEFAULT]
-# The default section contains the properties shared among all target systems.
+# The default section contains the properties shared for all target systems.
+# The home directory is the base for system specific directors and libraries
+home=/Users/mlkersten
+
 # The main property is the IP adress to reach a SQLscalpel service
 # server = localhost:5000
 server = localhost:5000
 
 # The prime purpose of sqlprobe is to run databas experiments on
 # behalf of registered sqlscalpel users or their team members.
-# The registered user will block all experimental results that are
+# The project owner may block all experimental results that are
 # likely not genuine, e.g. faked user, duplicate results, or timeout at the server.
 user = mk
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
-# this way one can conceal the actual host name.
+# this way one can conceal the actual host name, releasing only basis host properties.
 host = myMac
 
-# the default target can be set globally
+# the default target can be set as a global property
 target = UNKNOWN
 
 # Long running experiments can be costly, espcially in a Cloud setting.
@@ -33,7 +38,7 @@ debug = true
 forever= true
 
 # After too many database errors bail out to assess the scalpel grammar
-# a value 0 means never to bail out, otherwise it is the number of errors allowed
+# A value 0 means never to bail out, otherwise it is the number of errors allowed
 bailout = 0
 
 # All experiments are ran a number of times.
@@ -42,50 +47,31 @@ bailout = 0
 #
 repeat = 5
 
-# a batch of experiments can be stored in a file designate as input.
-# instead of contacting the webserver, this file is processed
-# the results are sent to standard out for capture
-input =
-
-# The sections are specific to the target DBMS identified by its nickname
-# Additional properties to initialize the DBMS server are provided by the server?
+# TARGET SYSTEM SPECIFICATIONS
+# The sections are specific to the target DBMS identified by their local nickname(=product)
+# Upon need additional key=value pairs can be given to instruct the corresponding driver
+# The 'db' is a list of database contacted in a round-robing fashion
+# Arbitrary project/experiments can be indicated with the wildcard '*'
+# The database location 'dbfarm' can be used in most circumtances as alternative to the 'db'
 
 [MonetDB]
-# multiple database instances can be exercised in a round robin fashion
 db = sf1,sf10
 dbms = MonetDB
-# using the name '*' is interpreted as arbitrary project/experiment
 project = TPC-H
 experiment = *
-# The location of the database for this product
-dbfarm = /export/scratch1/home/mk/dbfarm
-# if you also need the template and binding table set 'extra'
-extra = no
-
-[MonetDBopt]
-# multiple database instances can be exercised in a round robin fashion
-db = sf1,sf10
-dbms = MonetDBopt
-# using the name '*' is interpreted as arbitrary project/experiment
-project = TPC-H
-experiment = *
-# The location of the database for this product
-dbfarm = /export/scratch1/home/mk/dbfarm
-# if you also need the template and binding table set 'extra'
-extra = no
+dbfarm = %{home}/dbfarm
 
 [SQLite]
 db = sf1
 dbms = SQLite
 project = TPC-H
 experiment = q06,q01
-# dbfarm = /export/scratch1/home/mk/sqlite/
-dbfarm = /Users/mlkersten/sqlite/
+dbfarm = %{home}/sqlite/
 
 [PostgreSQL]
 db = sf1,sf10
 dbms = PostgreSQL
-dbfarm = /export/scratch1/home/mk/data
+dbfarm = %{home}/data
 project = TPC-H
 experiment = q06,q01
 
@@ -94,9 +80,10 @@ db = sf1,sf10
 dbms = MariaDB
 project = TPC-H
 experiment = q06,q01
-dbfarm =/export/scratch1/home/mk/dbfarm-mariadb
-dbsocket=/export/scratch1/home/mk/.mariadb.socket
-command=mysql --socket={socket} --database={database} -u root --password=tpch --lower_case_table_names=1
+dbfarm =%{home}/dbfarm-mariadb
+dbsocket=%{home}/.mariadb.socket
+command=mysql --socket={socket} --database={database} -u root
+port=51337
 bailout = 3
 
 [Actian]
@@ -105,4 +92,11 @@ dbms = Actian
 dbfarm = # Ingres specific properties
 project = TPC-H
 experiment = q06,q01
-command= sql {database}
+command=sql {database}
+
+[Firebird]
+db = sf1,sf10
+dbms = Firebird
+dbfarm = #%{home}/firebird/database.db
+project = TPC-H
+experiment = q06,q01
