Also handle the dbms version qualifier

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -57,6 +57,7 @@ repeat = 5
 [MonetDB]
 db = sf1,sf10
 dbms = MonetDB
+version= Mar18
 project = TPC-H
 experiment = *
 dbfarm = %{home}/dbfarm
@@ -64,6 +65,7 @@ dbfarm = %{home}/dbfarm
 [SQLite]
 db = sf1
 dbms = SQLite
+version =3.19.3
 project = TPC-H
 experiment = q06,q01
 dbfarm = %{home}/sqlite/
@@ -71,6 +73,7 @@ dbfarm = %{home}/sqlite/
 [PostgreSQL]
 db = sf1,sf10
 dbms = PostgreSQL
+version= 11beta1
 dbfarm = %{home}/data
 project = TPC-H
 experiment = q06,q01
@@ -78,6 +81,7 @@ experiment = q06,q01
 [MariaDB]
 db = sf1,sf10
 dbms = MariaDB
+version=10.3.8
 project = TPC-H
 experiment = q06,q01
 dbfarm =%{home}/dbfarm-mariadb
@@ -89,6 +93,7 @@ bailout = 3
 [Actian]
 db = sf1,sf10
 dbms = Actian
+version= VW 5.1.0
 dbfarm = # Ingres specific properties
 project = TPC-H
 experiment = q06,q01
@@ -97,6 +102,7 @@ command=sql {database}
 [Firebird]
 db = sf1,sf10
 dbms = Firebird
+version =  3.0.3
 dbfarm = #%{home}/firebird/database.db
 project = TPC-H
 experiment = q06,q01
