Handle reference names in config

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -21,7 +21,7 @@ user = mk
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name, releasing only basis host properties.
-host = myMac
+host=myMac
 
 # the default target can be set as a global property
 target = UNKNOWN
@@ -68,13 +68,13 @@ dbms = SQLite
 version =3.19.3
 project = TPC-H
 experiment = q06,q01
-dbfarm = %{home}/sqlite/
+dbfarm = %(home)s/sqlite/
 
 [PostgreSQL]
 db = sf1,sf10
 dbms = PostgreSQL
 version= 11beta1
-dbfarm = %{home}/data
+dbfarm = %(home)s/data
 project = TPC-H
 experiment = q06,q01
 
@@ -84,8 +84,8 @@ dbms = MariaDB
 version=10.3.8
 project = TPC-H
 experiment = q06,q01
-dbfarm =%{home}/dbfarm-mariadb
-dbsocket=%{home}/.mariadb.socket
+dbfarm =%(home)s/dbfarm-mariadb
+dbsocket=%(home)s/.mariadb.socket
 command=mysql --socket={socket} --database={database} -u root
 port=51337
 bailout = 3
@@ -103,6 +103,6 @@ command=sql {database}
 db = sf1,sf10
 dbms = Firebird
 version =  3.0.3
-dbfarm = #%{home}/firebird/database.db
+dbfarm = #%(home)s/firebird/database.db
 project = TPC-H
 experiment = q06,q01
