--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -60,7 +60,7 @@ dbms = MonetDB
 version= Mar18
 project = TPC-H
 experiment = *
-dbfarm = %{home}/dbfarm
+dbfarm = %{home}s/dbfarm
 
 [SQLite]
 db = sf1
