--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -18,6 +18,7 @@ server = localhost:5000
 # The project owner may block all experimental results that are
 # likely not genuine, e.g. faked user, duplicate results, or timeout at the server.
 user = mk
+key = # to be determined
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name, releasing only basis host properties.
