Prototype section for H2

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -2,7 +2,6 @@
 # author: Martin Kersten
 # A sample sqlprobe configuration file
 # This file should live within the directory from which you start the program.
-# Alternatively, passed as a command line argument to sqlprobe.py
 
 [DEFAULT]
 # The default section contains the properties shared for all target systems.
@@ -107,3 +106,14 @@ version =  3.0.3
 dbfarm = #%(home)s/firebird/database.db
 project = TPC-H
 experiment = q06,q01
+
+[H2]
+project= TPC-H
+db = sf1,sf10
+dbms=H2
+version=1.4
+jdbc= # JDBC library name
+dba = # name
+password = # password
+uri=jdbc:hsqldb:mem:.",      # url
+jar ="/path/to/hsqldb.jar" # path to where the jar file lives
