Prototype section for H2

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -111,6 +111,7 @@ experiment = q06,q01
 project= TPC-H
 db = sf1,sf10
 dbms=H2
+experiment = q06,q01
 version=1.4
 jdbc= # JDBC library name
 dba = # name
