--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -107,14 +107,22 @@ dbfarm = #%(home)s/firebird/database.db
 project = TPC-H
 experiment = q06,q01
 
-[H2]
-project= TPC-H
-db = sf1,sf10
-dbms=H2
+[H2-Client-Server]
+project = TPC-H
+db = /path/to/sf1,/path/to/sf10
+dbms = H2-Client-Server
 experiment = q06,q01
-version=1.4
-jdbc= # JDBC library name
-dba = # name
-password = # password
-uri=jdbc:hsqldb:mem:.",      # url
-jar ="/path/to/hsqldb.jar" # path to where the jar file lives
+version = 1.4.197
+user = sa
+uri = jdbc:h2:tcp://localhost/{database}
+jar = /path/to/hsqldb.jar
+
+[H2-Embedded]
+project = TPC-H
+db = /path/to/sf1,/path/to/sf10
+dbms = H2-Embedded
+experiment = q06,q01
+version = 1.4.197
+user = sa
+uri = jdbc:h2:{database}
+jar = /path/to/hsqldb.jar
