Added MonetDBLite support

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -53,6 +53,7 @@ repeat = 5
 # The 'db' is a list of database contacted in a round-robing fashion
 # Arbitrary project/experiments can be indicated with the wildcard '*'
 # The database location 'dbfarm' can be used in most circumtances as alternative to the 'db'
+# IMPORTANT - For JDBC connections, the JAVA_HOME environmental variable should be set!
 
 [MonetDB]
 db = sf1,sf10
@@ -124,5 +125,15 @@ dbms = H2-Embedded
 experiment = q06,q01
 version = 1.4.197
 user = sa
+password = something
 uri = jdbc:h2:{database}
-jar = /path/to/hsqldb.jar
+jars = /path/to/hsqldb.jar
+
+[MonetDBLite-Java]
+project = TPC-H
+db = /path/to/sf1,/path/to/sf10
+dbms = MonetDBLite-Java
+experiment = q06,q01
+version = 2.38-SNAPSHOT
+uri = jdbc:monetdb:embedded:{database}
+jars = /path/to/monetdb-jdbc-new.jar,/path/to/monetdb-java-lite.jar
