Support for Apache Derby and cleanup

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -108,26 +108,15 @@ dbfarm = #%(home)s/firebird/database.db
 project = TPC-H
 experiment = q06,q01
 
-[H2-Client-Server]
+[H2]
 project = TPC-H
 db = /path/to/sf1,/path/to/sf10
-dbms = H2-Client-Server
+dbms = H2
 experiment = q06,q01
 version = 1.4.197
 user = sa
-uri = jdbc:h2:tcp://localhost/{database}
-jar = /path/to/hsqldb.jar
-
-[H2-Embedded]
-project = TPC-H
-db = /path/to/sf1,/path/to/sf10
-dbms = H2-Embedded
-experiment = q06,q01
-version = 1.4.197
-user = sa
-password = something
 uri = jdbc:h2:{database}
-jars = /path/to/hsqldb.jar
+jars = /path/to/h2.jar
 
 [MonetDBLite-Java]
 project = TPC-H
@@ -137,3 +126,12 @@ experiment = q06,q01
 version = 2.38-SNAPSHOT
 uri = jdbc:monetdb:embedded:{database}
 jars = /path/to/monetdb-jdbc-new.jar,/path/to/monetdb-java-lite.jar
+
+[Apache Derby]
+project = TPC-H
+db = /path/to/sf1,/path/to/sf10
+dbms = Apache Derby
+experiment = q06,q01
+version = 10.14.2.0
+uri = jdbc:derby:{database};create=true;
+jars = /path/to/derby.jar
