Support for Apache Hive and HSQLDB

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -108,6 +108,24 @@ dbfarm = #%(home)s/firebird/database.db
 project = TPC-H
 experiment = q06,q01
 
+[Apache Derby]
+project = TPC-H
+db = /path/to/sf1,/path/to/sf10
+dbms = Apache Derby
+experiment = q06,q01
+version = 10.14.2.0
+uri = jdbc:derby:{database};create=true;
+jars = /path/to/derby.jar
+
+[Apache Hive]
+project = TPC-H
+db = sf1,sf10
+dbms = Apache Hive
+experiment = q06,q01
+version = 3.1.0
+uri = jdbc:hive://localhost:10000/{database}
+jars = /path/to/hive.jar
+
 [H2]
 project = TPC-H
 db = /path/to/sf1,/path/to/sf10
@@ -118,6 +136,15 @@ user = sa
 uri = jdbc:h2:{database}
 jars = /path/to/h2.jar
 
+[HSQLDB]
+project = TPC-H
+db = /path/to/sf1,/path/to/sf10
+dbms = HSQLDB
+experiment = q06,q01
+version = 2.4.1
+uri = jdbc:hsqldb:file:{database}
+jars = /path/to/hsqldb.jar
+
 [MonetDBLite-Java]
 project = TPC-H
 db = /path/to/sf1,/path/to/sf10
@@ -126,12 +153,3 @@ experiment = q06,q01
 version = 2.38-SNAPSHOT
 uri = jdbc:monetdb:embedded:{database}
 jars = /path/to/monetdb-jdbc-new.jar,/path/to/monetdb-java-lite.jar
-
-[Apache Derby]
-project = TPC-H
-db = /path/to/sf1,/path/to/sf10
-dbms = Apache Derby
-experiment = q06,q01
-version = 10.14.2.0
-uri = jdbc:derby:{database};create=true;
-jars = /path/to/derby.jar
