--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -12,15 +12,15 @@ home=/Users/mlkersten
 # server = localhost:5000
 server = localhost:5000
 
-# The prime purpose of sqlprobe is to run databas experiments on
-# behalf of registered sqlscalpel users or their team members.
-# The project owner may block all experimental results that are
-# likely not genuine, e.g. faked user, duplicate results, or timeout at the server.
-user = mk
-key = # to be determined
+# The prime purpose of sqlprobe is to run database experiments on
+# behalf of registered sqlscalpel users.
+# It can retrieve tasks providing a project specific key,
+# which is sent by email to the agent.
+key = # the secret key
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
-# this way one can conceal the actual host name, releasing only basis host properties.
+# this way one can conceal the actual host name, releasing only basic host properties.
+# However, for proper interpretation of the results some host properties are welcome.
 host=myMac
 
 # the default target can be set as a global property
@@ -48,18 +48,18 @@ bailout = 0
 repeat = 5
 
 # TARGET SYSTEM SPECIFICATIONS
-# The sections are specific to the target DBMS identified by their local nickname(=product)
+# The sections are specific to the target DBMS identified by their local product
 # Upon need additional key=value pairs can be given to instruct the corresponding driver
 # The 'db' is a list of database contacted in a round-robing fashion
 # Arbitrary project/experiments can be indicated with the wildcard '*'
 # The database location 'dbfarm' can be used in most circumtances as alternative to the 'db'
 
 [MonetDB]
+project = TPC-H
+experiment = *
 db = sf1,sf10
 dbms = MonetDB
 version= Mar18
-project = TPC-H
-experiment = *
 dbfarm = %{home}s/dbfarm
 
 [SQLite]
