--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -12,18 +12,16 @@ home=/Users/mlkersten
 # server = localhost:5000
 server = localhost:5000
 
-# The prime purpose of sqlprobe is to run database experiments on
-# behalf of registered sqlscalpel users.
-# It can retrieve tasks providing a project specific key,
-# which is sent by email to the agent.
-key = # the secret key
+# The prime purpose of sqlprobe is to run database experiments on behalf of registered sqlscalpel users.
+# It can retrieve tasks providing a project specific key, which is sent by email.
+key =abcde
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name, releasing only basic host properties.
 # However, for proper interpretation of the results some host properties are welcome.
 host=myMac
 
-# the default target can be set as a global property
+# the default target can be set as a global property to enable command line steering
 target = UNKNOWN
 
 # Long running experiments can be costly, espcially in a Cloud setting.
@@ -34,7 +32,7 @@ timeout = 60
 # For debugging purposes one can turn on this flag
 debug = true
 
-# don't stop the driver, otherwise stop upon error or out of work
+# The program stops when it runs out of work. This can be avoided using the property 'forever'
 forever= true
 
 # After too many database errors bail out to assess the scalpel grammar
@@ -47,7 +45,7 @@ bailout = 0
 #
 repeat = 5
 
-# TARGET SYSTEM SPECIFICATIONS
+# TASK SPECIFICATION
 # The sections are specific to the target DBMS identified by their local product
 # Upon need additional key=value pairs can be given to instruct the corresponding driver
 # The 'db' is a list of database contacted in a round-robing fashion
