Re-organize structure

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -14,7 +14,8 @@ server = localhost:5000
 
 # The prime purpose of sqlprobe is to run database experiments on behalf of registered sqlscalpel users.
 # It can retrieve tasks providing a project specific key, which is sent by email.
-key =abcde
+# Keys are handed out on a project basis. The global name is used for debugging.
+key =aBcDeFgH
 
 # sqlscalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name, releasing only basic host properties.
