Re-organize structure

--- a/sqlprobe.conf
+++ b/sqlprobe.conf
@@ -5,22 +5,20 @@
 
 [DEFAULT]
 # The default section contains the properties shared for all target systems.
-# The home directory is the base for system specific directors and libraries
-home=/Users/mlkersten
 
-# The main property is the IP adress to reach a SQLscalpel service
+# The main property is the IP adress to reach a SQLscalpel web server
 # server = localhost:5000
 server = localhost:5000
 
 # The prime purpose of sqlprobe is to run database experiments on behalf of registered sqlscalpel users.
-# It can retrieve tasks providing a project specific key, which is sent by email.
+# It can retrieve tasks providing a project specific key.
 # Keys are handed out on a project basis. The global name is used for debugging.
 key =aBcDeFgH
 
-# sqlscalpel differentiates the hosts on which experiments are ran with a nickname
+# SQLscalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name, releasing only basic host properties.
 # However, for proper interpretation of the results some host properties are welcome.
-host=myMac
+host=Mac
 
 # the default target can be set as a global property to enable command line steering
 target = UNKNOWN
@@ -40,8 +38,7 @@ forever= true
 # A value 0 means never to bail out, otherwise it is the number of errors allowed
 bailout = 0
 
-# All experiments are ran a number of times.
-# Preferably a number of times, because the first
+# All experiments are ran a number of times, because the first
 # run typically warms up the database engine.
 #
 repeat = 5
@@ -114,7 +111,7 @@ dbms = Apache Derby
 experiment = q06,q01
 version = 10.14.2.0
 uri = jdbc:derby:{database};create=true;
-jars = /path/to/derby.jar
+jars = </path/to/>derby.jar
 
 [Apache Hive]
 project = TPC-H
@@ -123,11 +120,11 @@ dbms = Apache Hive
 experiment = q06,q01
 version = 3.1.0
 uri = jdbc:hive://localhost:10000/{database}
-jars = /path/to/hive.jar
+jars = </path/to>/hive.jar
 
 [H2]
 project = TPC-H
-db = /path/to/sf1,/path/to/sf10
+db = </path/to/sf1>/path/to/sf10
 dbms = H2
 experiment = q06,q01
 version = 1.4.197
@@ -137,7 +134,7 @@ jars = /path/to/h2.jar
 
 [HSQLDB]
 project = TPC-H
-db = /path/to/sf1,/path/to/sf10
+db = </path/to/sf1>/path/to/sf10
 dbms = HSQLDB
 experiment = q06,q01
 version = 2.4.1
@@ -146,7 +143,7 @@ jars = /path/to/hsqldb.jar
 
 [MonetDBLite-Java]
 project = TPC-H
-db = /path/to/sf1,/path/to/sf10
+db = </path/to/sf1>/path/to/sf10
 dbms = MonetDBLite-Java
 experiment = q06,q01
 version = 2.38-SNAPSHOT
