Commit the renaming into SQALPEL

--- a/sqalpel.conf
+++ b/sqalpel.conf
@@ -6,16 +6,16 @@
 [DEFAULT]
 # The default section contains the properties shared for all target systems.
 
-# The main property is the IP adress to reach a SQLscalpel web server
+# The main property is the IP adress to reach a Sqalpel web server
 # server = localhost:5000
 server = localhost:5000
 
-# The prime purpose of sqlprobe is to run database experiments on behalf of registered sqlscalpel users.
+# The prime purpose of sqlprobe is to run database experiments on behalf of registered Sqalpel users.
 # It can retrieve tasks providing a project specific key.
 # Keys are handed out on a project basis. The global name is used for debugging.
 key =aBcDeFgH
 
-# SQLscalpel differentiates the hosts on which experiments are ran with a nickname
+# Sqalpel differentiates the hosts on which experiments are ran with a nickname
 # this way one can conceal the actual host name, releasing only basic host properties.
 # However, for proper interpretation of the results some host properties are welcome.
 host=Mac
@@ -52,7 +52,7 @@ repeat = 5
 # IMPORTANT - For JDBC connections, the JAVA_HOME environmental variable should be set!
 
 [MonetDB]
-project = TPC-H
+project = TPC_H
 experiment = *
 db = sf1,sf10
 dbms = MonetDB
@@ -63,7 +63,8 @@ dbfarm = %{home}s/dbfarm
 db = sf1
 dbms = SQLite
 version =3.19.3
-project = TPC-H
+project = TPC_H
+branch = *
 experiment = q06,q01
 dbfarm = %(home)s/sqlite/
 
@@ -72,14 +73,14 @@ db = sf1,sf10
 dbms = PostgreSQL
 version= 11beta1
 dbfarm = %(home)s/data
-project = TPC-H
+project = TPC_H
 experiment = q06,q01
 
 [MariaDB]
 db = sf1,sf10
 dbms = MariaDB
 version=10.3.8
-project = TPC-H
+project = TPC_H
 experiment = q06,q01
 dbfarm =%(home)s/dbfarm-mariadb
 dbsocket=%(home)s/.mariadb.socket
@@ -92,7 +93,7 @@ db = sf1,sf10
 dbms = Actian
 version= VW 5.1.0
 dbfarm = # Ingres specific properties
-project = TPC-H
+project = TPC_H
 experiment = q06,q01
 command=sql {database}
 
@@ -101,11 +102,11 @@ db = sf1,sf10
 dbms = Firebird
 version =  3.0.3
 dbfarm = #%(home)s/firebird/database.db
-project = TPC-H
+project = TPC_H
 experiment = q06,q01
 
 [Apache Derby]
-project = TPC-H
+project = TPC_H
 db = /path/to/sf1,/path/to/sf10
 dbms = Apache Derby
 experiment = q06,q01
@@ -114,7 +115,7 @@ uri = jdbc:derby:{database};create=true;
 jars = </path/to/>derby.jar
 
 [Apache Hive]
-project = TPC-H
+project = TPC_H
 db = sf1,sf10
 dbms = Apache Hive
 experiment = q06,q01
@@ -123,7 +124,7 @@ uri = jdbc:hive://localhost:10000/{database}
 jars = </path/to>/hive.jar
 
 [H2]
-project = TPC-H
+project = TPC_H
 db = </path/to/sf1>/path/to/sf10
 dbms = H2
 experiment = q06,q01
@@ -133,7 +134,7 @@ uri = jdbc:h2:{database}
 jars = /path/to/h2.jar
 
 [HSQLDB]
-project = TPC-H
+project = TPC_H
 db = </path/to/sf1>/path/to/sf10
 dbms = HSQLDB
 experiment = q06,q01
@@ -142,7 +143,7 @@ uri = jdbc:hsqldb:file:{database}
 jars = /path/to/hsqldb.jar
 
 [MonetDBLite-Java]
-project = TPC-H
+project = TPC_H
 db = </path/to/sf1>/path/to/sf10
 dbms = MonetDBLite-Java
 experiment = q06,q01
