Commit the renaming into SQALPEL

--- a/sqalpel.conf
+++ b/sqalpel.conf
@@ -1,6 +1,6 @@
 # (c) 2018- MonetDB Solutions
 # author: Martin Kersten
-# A sample sqlprobe configuration file
+# A sample SQALPEL configuration file
 # This file should live within the directory from which you start the program.
 
 [DEFAULT]
@@ -15,8 +15,8 @@ server = localhost:5000
 # Keys are handed out on a project basis. The global name is used for debugging.
 key =aBcDeFgH
 
-# Sqalpel differentiates the hosts on which experiments are ran with a nickname
-# this way one can conceal the actual host name, releasing only basic host properties.
+# Sqalpel differentiates the hosts on which experiments are ran with a nickname.
+# This way one can conceal the actual host name, releasing only basic host properties.
 # However, for proper interpretation of the results some host properties are welcome.
 host=Mac
 
