--- a/sqalpel.conf
+++ b/sqalpel.conf
@@ -7,34 +7,33 @@
 # The default section contains the properties shared for all target systems.
 
 # The main property is the IP adress to reach a Sqalpel web server
-# server = localhost:5000
 server = localhost:5000
+# server = http://scalpel-14242567.eu-west-1.elb.amazonaws.com/
 
-# The prime purpose of sqlprobe is to run database experiments on behalf of registered Sqalpel users.
-# It can retrieve tasks providing a project specific key.
-# Keys are handed out on a project basis. The global name is used for debugging.
+# The prime purpose of sqlprobe is to run database experiments on behalf of registered SQALPEL users.
+# It can retrieve tasks by providing a project specific key.
+# The global key is used for debugging.
 key =aBcDeFgH
 
 # Sqalpel differentiates the hosts on which experiments are ran with a nickname.
 # This way one can conceal the actual host name, releasing only basic host properties.
-# However, for proper interpretation of the results some host properties are welcome.
 host=Mac
 
 # the default target can be set as a global property to enable command line steering
-target = UNKNOWN
+target = BabyBench
 
 # Long running experiments can be costly, espcially in a Cloud setting.
 # Therefore, when the DBMS has an option to timeout a query, it can use this
 # global time out property (in seconds)
 timeout = 60
 
-# For debugging purposes one can turn on this flag
+# For debugging purposes of sqalpel.py one can turn on this flag
 debug = true
 
 # The program stops when it runs out of work. This can be avoided using the property 'forever'
 forever= true
 
-# After too many database errors bail out to assess the scalpel grammar
+# After too many database errors bail out to assess the experimental setup.
 # A value 0 means never to bail out, otherwise it is the number of errors allowed
 bailout = 0
 
@@ -44,15 +43,15 @@ bailout = 0
 repeat = 5
 
 # TASK SPECIFICATION
-# The sections are specific to the target DBMS identified by their local product
+# The sections are specific to the target project, dbms, and experiments.
 # Upon need additional key=value pairs can be given to instruct the corresponding driver
 # The 'db' is a list of database contacted in a round-robing fashion
 # Arbitrary project/experiments can be indicated with the wildcard '*'
 # The database location 'dbfarm' can be used in most circumtances as alternative to the 'db'
 # IMPORTANT - For JDBC connections, the JAVA_HOME environmental variable should be set!
 
-[MonetDB]
-project = TPC_H
+[BabyBench]
+project = BabyBench
 experiment = *
 db = sf1,sf10
 dbms = MonetDB
