--- a/sqalpel.conf
+++ b/sqalpel.conf
@@ -10,17 +10,14 @@
 server = localhost:5000
 # server = http://scalpel-14242567.eu-west-1.elb.amazonaws.com/
 
-# The prime purpose of sqlprobe is to run database experiments on behalf of registered SQALPEL users.
+# The prime purpose of SQALPEL is to run database experiments on behalf of registered SQALPEL users.
 # It can retrieve tasks by providing a project specific key.
 # The global key is used for debugging.
 key =aBcDeFgH
 
-# Sqalpel differentiates the hosts on which experiments are ran with a nickname.
+# SQALPEL differentiates the hosts on which experiments are ran with a nickname.
 # This way one can conceal the actual host name, releasing only basic host properties.
-host=Mac
-
-# the default target can be set as a global property to enable command line steering
-target = BabyBench
+host = Mac
 
 # Long running experiments can be costly, espcially in a Cloud setting.
 # Therefore, when the DBMS has an option to timeout a query, it can use this
@@ -43,7 +40,7 @@ bailout = 0
 repeat = 5
 
 # TASK SPECIFICATION
-# The sections are specific to the target project, dbms, and experiments.
+# The sections are specific to the target project, dbms, host, and experiments.
 # Upon need additional key=value pairs can be given to instruct the corresponding driver
 # The 'db' is a list of database contacted in a round-robing fashion
 # Arbitrary project/experiments can be indicated with the wildcard '*'
@@ -51,6 +48,7 @@ repeat = 5
 # IMPORTANT - For JDBC connections, the JAVA_HOME environmental variable should be set!
 
 [BabyBench]
+key =aBcDeFgH
 project = BabyBench
 experiment = *
 db = sf1,sf10
